# PRJ-medtec_androidapp

./: .gitignore  .travis.yml  OpenCL error codes  README-OPENCV.md  README.md  build.gradle  gradle.properties  local.properties
OpenGL-RenderScript-app/GPUChallenge/: gradle.properties  local.properties
OpenGL-standalone-app/: local.properties
OpenGL-standalone-app/app/: build.gradle
RedPitaya_emulator/: emul  emul_vide  hand_emulator  plate_emulator  probe_emulator  readme.md  run.sh
RedPitaya_emulator/srcbin/: .probe_emulator.c.swp  TCP_API.h  emul.c  (+5 more)
android-app/: .gitignore  LICENSE.md  README-OPENCV.md  build.gradle  gradle.properties  import-summary.txt  local.properties
android-app/app/src/main/cpp/: CMakeLists.txt  Convolution3x3Filter.cpp  Convolution3x3Filter.hpp  Image2D.hpp  LinearQuantificationFilter.cpp  LinearQuantificationFilter.hpp  MedianFilter.cpp  MedianFilter.hpp  ThreadPool.h  pointer_management.hpp  rendering.cpp  scan_conversion_float.cpp  scan_conversion_float.hpp
app/: build.gradle  proguard-rules.pro
doc/: README.md
openCVLibrary310/: build.gradle
phantom/: data_kydney.csv
probe_emulator/: .run.sh.swp  Makefile  hand_emulator  plate_emulator  probe_emulator  readme.md  run.sh
probe_emulator_java/: ImageStreamingRunnable.java  NetworkHelper.java  ProbeEmulator.java  ProbeImageConfiguration.java  ProbeServer.java  README.md  UltrasoundImage.java  UltrasoundImageSequence.java  build.gradle  probe_emulator  readme.md  run.sh  settings.gradle  start.sh
web/: .gitignore  gulpfile.js  index.php  package.json  webpack.mix.js
(+1878 files in other folders)
